# vak

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  compileShaders.bat
Editor/: vak.cpp
Engine/Core/: JobSystem.cpp  WindowManager.cpp
Engine/Entity/: Camera.cpp
Engine/Renderer/: CommandList.cpp  CommandPool.cpp  Descriptors.cpp  Device.cpp  GUI.cpp  Pipeline.cpp  RenderBase.cpp  RenderContext.cpp  Renderer.cpp  Shader.cpp  StagingDevice.cpp  Swapchain.cpp  Timeline.cpp
Engine/Resource/: Resource.cpp
assets/shaders/: common.glsl  main.frag.glsl  main.vert.glsl
include/Core/: Input.hpp  JobSystem.hpp  SceneGraph.hpp  WindowManager.hpp
include/Entity/: Camera.hpp  Lights.hpp
include/Renderer/: CommandPool.hpp  Descriptors.hpp  Device.hpp  GUI.hpp  Pipeline.hpp  RenderBase.hpp  RenderContext.hpp  RenderStatistics.hpp  Renderer.hpp  Shader.hpp  Swapchain.hpp  Texture.hpp  Timeline.hpp
include/Resource/: Resource.hpp
include/Util/: Containers.hpp  Defines.hpp  Pool.hpp  Singleton.hpp
